packages/web-components/src/components/fluid-multi-select/fluid-multi-select.scss
/**
 * Copyright IBM Corp. 2026
 *
 * This source code is licensed under the Apache-2.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

$css--plex: true !default;
@use '@carbon/styles/scss/components/fluid-multiselect/index';
@use '@carbon/styles/scss/layout' as *;
@use '@carbon/styles/scss/type' as *;
@use '@carbon/styles/scss/config' as *;
@use '@carbon/styles/scss/spacing' as *;
@use '@carbon/styles/scss/theme' as *;
@use '@carbon/styles/scss/components/multiselect' as *;
@use '@carbon/styles/scss/colors';
@use '@carbon/styles/scss/utilities/convert' as *;
@use '@carbon/styles/scss/components/list-box/list-box';
@use '@carbon/styles/scss/components/fluid-list-box';
@use '@carbon/styles/scss/utilities' as *;

:host(#{$prefix}-fluid-multi-select) {
  @include emit-layout-tokens();

  box-sizing: border-box;
  outline: none;

  .#{$prefix}--assistive-text {
    inset-block-start: -100%;
    inset-inline-start: -100%;
  }

  .#{$prefix}--list-box__menu {
    inset-block-start: 100%;
    margin-block-start: 1px;
    outline: none;
  }

  .#{$prefix}--text-input {
    border: none;
    outline: none;
    padding-inline-start: 0;
  }

  .#{$prefix}--tag--disabled {
    @extend .#{$prefix}--tag--disabled;

    background-color: transparent;
    color: $text-disabled;
  }

  .#{$prefix}--list-box__field:focus {
    @extend .#{$prefix}--multi-select--filterable--input-focused;
  }

  .#{$prefix}--list-box__divider {
    display: block;
    border: none;
    margin: 0 1rem;
    border-block-end: 1px solid $border-subtle;
  }

  .#{$prefix}--tag.#{$prefix}--tag--filter {
    margin-block-start: 0;
  }

  .#{$prefix}--list-box__selection--multi::after {
    display: none;
  }
}

// Target multiselect items inside fluid multiselect for non-condensed height
:host(#{$prefix}-fluid-multi-select:not([is-condensed])) {
  ::slotted(#{$prefix}-multi-select-item) {
    block-size: $spacing-10;
  }
}

:host(#{$prefix}-fluid-multi-select[invalid]:not([disabled]):not([read-only])),
:host(#{$prefix}-fluid-multi-select[warn]:not([disabled]):not([read-only])) {
  .#{$prefix}--form__helper-text {
    padding: to-rem(8px) 4rem to-rem(8px) $spacing-05;
    inline-size: auto;
    margin-block-start: 0;
  }

  .#{$prefix}--list-box {
    border-block-end: 1px solid transparent;
  }

  .#{$prefix}--list-box.#{$prefix}--list-box--warning
    .#{$prefix}--list-box__invalid-icon,
  .#{$prefix}--list-box__invalid-icon--warning {
    inset-block-start: to-rem(81px);
    inset-inline-end: $spacing-05;
    pointer-events: none;
  }
}

:host(#{$prefix}-fluid-multi-select[warn]:not([disabled]):not([read-only])) {
  .#{$prefix}--form__helper-text {
    color: $text-primary;
  }
}

:host(#{$prefix}-fluid-multi-select[invalid]:not([disabled]):not([read-only])) {
  .#{$prefix}--form__helper-text {
    color: $text-error;
  }
}

:host(#{$prefix}-fluid-multi-select[filterable]) {
  .#{$prefix}--list-box__field:focus-within {
    outline: $spacing-01 solid $focus;
    outline-offset: -#{$spacing-01};
  }
  .#{$prefix}--list-box {
    .#{$prefix}--list-box__field {
      padding-inline-end: $spacing-01;
    }
  }
  .#{$prefix}--list-box__selection {
    inset-block-start: 66%;
  }
}
:host(#{$prefix}-fluid-multi-select[filterable][has-value])
  .#{$prefix}--list-box__field
  ~ ::slotted(#{$prefix}-ai-label) {
  inset-inline-end: calc($spacing-10 + 18px);
}

// Direction top
:host(#{$prefix}-fluid-multi-select[direction='top']) {
  @extend .#{$prefix}--list-box--up;

  .#{$prefix}--list-box__menu {
    inset-block-start: auto;
  }
}

// AI Label styles
:host(#{$prefix}-fluid-multi-select[ai-label]) {
  @extend .#{$prefix}--list-box__wrapper--slug;

  ::slotted(#{$prefix}-ai-label),
  ::slotted(#{$prefix}-slug) {
    position: absolute;
    inset-block-start: 70%;
    inset-inline-end: $spacing-09;
  }

  ::slotted(#{$prefix}-ai-label:not([revert-active])),
  ::slotted(#{$prefix}-slug:not([revert-active])) {
    transform: translateY(-70%);
  }

  .#{$prefix}--list-box__wrapper--decorator {
    @include ai-gradient;
  }
}
// AI label dividers - always present
:host(#{$prefix}-fluid-multi-select[ai-label]) ::slotted(#{$prefix}-ai-label) {
  &::after {
    position: absolute;
    background-color: $border-subtle-01;
    block-size: to-rem(16px);
    content: '';
    inline-size: to-rem(1px);
    inset-inline-start: calc(#{$spacing-06} - to-rem(1px));
  }
}

:host(#{$prefix}-fluid-multi-select[ai-label][read-only]),
:host(#{$prefix}-fluid-multi-select[ai-label][disabled]) {
  .#{$prefix}--list-box {
    border-block-end-color: $ai-border-strong;
  }

  .#{$prefix}--list-box__field {
    border-block-end: 1px solid $ai-border-strong;
  }

  ::slotted(#{$prefix}-ai-label)::before {
    display: none;
  }
}

