fix(styles): fluid list/select AI label alignment with validation

--- a/packages/web-components/src/components/fluid-multi-select/fluid-multi-select.scss
+++ b/packages/web-components/src/components/fluid-multi-select/fluid-multi-select.scss
@@ -145,17 +145,28 @@ $css--plex: true !default;
   ::slotted(#{$prefix}-ai-label),
   ::slotted(#{$prefix}-slug) {
     position: absolute;
-    inset-block-start: 70%;
+    inset-block-start: to-rem(42px);
     inset-inline-end: $spacing-09;
-  }
-
-  ::slotted(#{$prefix}-ai-label:not([revert-active])),
-  ::slotted(#{$prefix}-slug:not([revert-active])) {
-    transform: translateY(-70%);
   }
 
   .#{$prefix}--list-box__wrapper--decorator {
     @include ai-gradient;
+  }
+}
+
+:host(
+    #{$prefix}-fluid-multi-select[ai-label][invalid]:not([disabled]):not(
+        [read-only]
+      )
+  ),
+:host(
+    #{$prefix}-fluid-multi-select[ai-label][warn]:not([disabled]):not(
+        [read-only]
+      )
+  ) {
+  ::slotted(#{$prefix}-ai-label),
+  ::slotted(#{$prefix}-slug) {
+    inset-inline-end: $spacing-08;
   }
 }
 // AI label dividers - always present
